--- a/composer.json
+++ b/composer.json
@@ -60,7 +60,9 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "requirements-checker": "script",
+            "security-checker security:check": "script"
         },
         "post-install-cmd": [
             "@auto-scripts"
